// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`./index.js <Home /> (render true, is dark false, language "en") should render 1`] = `
<div
  className="Container classes-root"
  maxWidth="lg"
>
  <div
    align="center"
    className="Typography"
    component="h1"
    variant="h4"
  >
    Hi! My Name Is Lucas 
    <br />
     Welcome To My Personal Website
  </div>
  <div
    className="Toolbar classes-toolbar"
  >
    <button
      color="primary"
      onClick={[Function]}
      variant="contained"
    >
      Get In Touch
    </button>
  </div>
  <div
    className="OnlineProfileSvg"
    isDark={false}
  />
  <div
    align="center"
    className="Typography"
    component="h2"
    variant="h4"
  >
    Contact
  </div>
  <div
    align="center"
    className="Typography"
    component="p"
    variant="h5"
  >
    A contact form is coming soon. 
    <br />
    You can check my 
    <a
      href="https://github.com/lucasMontenegro"
      target="__blank"
    >
      GitHub profile
    </a>
     instead.
  </div>
</div>
`;

exports[`./index.js <Home /> (render true, is dark false, language "es") should render 1`] = `
<div
  className="Container classes-root"
  maxWidth="lg"
>
  <div
    align="center"
    className="Typography"
    component="h1"
    variant="h4"
  >
    Hola! Mi nombre es Lucas 
    <br />
     Bienvenido A Mi Página Web Personal
  </div>
  <div
    className="Toolbar classes-toolbar"
  >
    <button
      color="primary"
      onClick={[Function]}
      variant="contained"
    >
      Pongámonos En Contacto
    </button>
  </div>
  <div
    className="OnlineProfileSvg"
    isDark={false}
  />
  <div
    align="center"
    className="Typography"
    component="h2"
    variant="h4"
  >
    Contacto
  </div>
  <div
    align="center"
    className="Typography"
    component="p"
    variant="h5"
  >
    Un formulario de contacto estará disponible muy pronto. 
    <br />
    Por ahora podés visitar mi 
    <a
      href="https://github.com/lucasMontenegro"
      target="__blank"
    >
      perfil en GitHub
    </a>
    .
  </div>
</div>
`;

exports[`./index.js <Home /> (render true, is dark true, language "en") should render 1`] = `
<div
  className="Container classes-root"
  maxWidth="lg"
>
  <div
    align="center"
    className="Typography"
    component="h1"
    variant="h4"
  >
    Hi! My Name Is Lucas 
    <br />
     Welcome To My Personal Website
  </div>
  <div
    className="Toolbar classes-toolbar"
  >
    <button
      color="primary"
      onClick={[Function]}
      variant="contained"
    >
      Get In Touch
    </button>
  </div>
  <div
    className="OnlineProfileSvg"
    isDark={true}
  />
  <div
    align="center"
    className="Typography"
    component="h2"
    variant="h4"
  >
    Contact
  </div>
  <div
    align="center"
    className="Typography"
    component="p"
    variant="h5"
  >
    A contact form is coming soon. 
    <br />
    You can check my 
    <a
      href="https://github.com/lucasMontenegro"
      target="__blank"
    >
      GitHub profile
    </a>
     instead.
  </div>
</div>
`;

exports[`./index.js <Home /> (render true, is dark true, language "es") should render 1`] = `
<div
  className="Container classes-root"
  maxWidth="lg"
>
  <div
    align="center"
    className="Typography"
    component="h1"
    variant="h4"
  >
    Hola! Mi nombre es Lucas 
    <br />
     Bienvenido A Mi Página Web Personal
  </div>
  <div
    className="Toolbar classes-toolbar"
  >
    <button
      color="primary"
      onClick={[Function]}
      variant="contained"
    >
      Pongámonos En Contacto
    </button>
  </div>
  <div
    className="OnlineProfileSvg"
    isDark={true}
  />
  <div
    align="center"
    className="Typography"
    component="h2"
    variant="h4"
  >
    Contacto
  </div>
  <div
    align="center"
    className="Typography"
    component="p"
    variant="h5"
  >
    Un formulario de contacto estará disponible muy pronto. 
    <br />
    Por ahora podés visitar mi 
    <a
      href="https://github.com/lucasMontenegro"
      target="__blank"
    >
      perfil en GitHub
    </a>
    .
  </div>
</div>
`;

exports[`./index.js should use the right verions of its dependencies 1`] = `
Object {
  "@material-ui/core": "^4.5.0",
  "react": "^16.10.1",
}
`;
